# goph457-w2024-lab04-stEG

./: README.md  contour.py  coord.txt  horizontal_contour_g3.csv  horizontal_survey_g1.csv  horizontal_survey_g2.csv  horizontal_survey_g3.csv  pyproject.toml  rho.txt
