[project]
name = "lab4"
version = "0.0.1"
authors = [
{ name="Ethan Grozell", email="ethan.grozell@ucalgary.ca" },
]
description="Script for lab 1 GOPH 457"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
"pandas"
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/egrozell/goph-457-wlab04-stEG"
